Version modal-lg and fixed changes word wrap

--- a/app/assets/stylesheets/rails_admin/ra.history.scss
+++ b/app/assets/stylesheets/rails_admin/ra.history.scss
@@ -1,3 +1,7 @@
+td.diff {
+  white-space: normal !important;
+}
+
 ins {
   background-color: #c6ffc6;
   text-decoration: none;
